--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
@@ -72,7 +72,7 @@
 					</md-table-container>
 										
 					<div layout="column" flex class="empty-grid" layout-align="center center" ng-show="model.planoAtendimentoFamiliar.page.content.length == 0">
-						Nenhum registro de plano de atendimento familiar encontrado
+						Nenhum registo de plano de atendimento familiar encontrado
 					</div>
 					
 					<md-divider></md-divider>
