--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/popup/adicionar-integrante-familiar-popup.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/popup/adicionar-integrante-familiar-popup.html
@@ -111,7 +111,7 @@
 									<div layout="row">
 						    			<md-input-container layout="column" flex="30" style="margin-right:30px">
 								    		<label>Rua</label>                                  
-							                <input maxlength="144" name="rua" required ng-model="model.integranteFamiliar.entity.endereco.rua">
+							                <input maxlength="144" name="rua" ng-model="model.integranteFamiliar.entity.endereco.rua">
 							
 							                <div ng-messages="model.integranteFamiliar.form.rua.$error">
 							                	<div ng-message="required" ng-if="model.integranteFamiliar.form.$submitted">Campo obrigatório</div>
@@ -120,7 +120,7 @@
 							            
 							            <md-input-container layout="column" flex="30" ">
 								    		<label>Bairro</label>
-							                <input maxlength="144" name="bairro" required ng-model="model.integranteFamiliar.entity.endereco.bairro">
+							                <input maxlength="144" name="bairro" ng-model="model.integranteFamiliar.entity.endereco.bairro">
 							
 							                <div ng-messages="model.integranteFamiliar.form.bairro.$error">
 							                	<div ng-message="required" ng-if="model.integranteFamiliar.form.$submitted">Campo obrigatório</div>
