--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
@@ -27,6 +27,12 @@
 				Família
 			</md-button>
 			
+			<md-button style="text-align: left;"
+				ng-click="toggleMenuSideNavHandler('casa-lar.list');">
+				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
+				Casa Lar
+			</md-button>
+			
 			<md-divider></md-divider>
 			
 			<md-button style="text-align: left;"
