--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/casalar/casa-lar-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/casalar/casa-lar-form.html
@@ -10,11 +10,11 @@
 	    	</div>
 	    	
 	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.casaLar.entity.enabled || !model.casaLar.entity.id" class="default-header md-primary md-hue-3">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="insertUser()">Salvar</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="insertCasaLar()">Salvar</md-button>
 	        </div>
 	        
 	         <div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(USER_LIST_STATE)">Voltar</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(CASA_LAR_LIST_STATE)">Voltar</md-button>
 	        </div>
 	        
 	        <div ng-if="model.casaLar.entity.enabled == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
@@ -25,16 +25,12 @@
 		        <md-button class="md-raised md-accent default-save-button" ng-click="enableUser()">Ativar registro</md-button>
 	        </div>
 	        
-	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.casaLar.entity.enabled && model.casaLar.entity.id" class="default-header md-primary md-hue-3">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="openChangePasswordHandler(model.casaLar.entity.id)">Alterar Senha</md-button>
-	        </div>
-	        
 	    </md-toolbar>
 		
 		<div layout="column" md-theme="{{}}" style="height: 100%; position:absolute; width:100%;">
 			<md-content layout="column" style="height: 93%;">
 				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.ordemServico.selectedTab">
-					<md-tab label="Usuário">
+					<md-tab label="Casa Lar">
 						
 						<div layout-fill style="height:50%">
 				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
@@ -43,7 +39,7 @@
 										<form novalidate name="model.casaLar.form" class="default-form">
 											
 											<md-input-container layout="column" flex="30" ">
-									    		<label>Nome</label>
+									    		<label>Número</label>
 								                <input type="number" name="numero" required ng-model="model.casaLar.entity.numero">
 								
 								                <div ng-messages="model.casaLar.form.numero.$error">
@@ -53,26 +49,80 @@
 								            </md-input-container>
 											
 											<md-input-container layout="column" flex="30" ">
-									    		<label>Email</label>
-								                <input type="email" ng-disabled="!model.casaLar.entity.enabled" maxlength="144" md-maxlength="144" name="email" required ng-model="model.casaLar.entity.email">
+									    		<label>Nome da cuidadora residente</label>
+								                <input  maxlength="255" md-maxlength="255" name="nomeCuidadoraResidente" required ng-model="model.casaLar.entity.cuidadoraResidente.nome">
 								
-								                <div ng-messages="model.casaLar.form.email.$error">
+								                <div ng-messages="model.casaLar.form.nomeCuidadoraResidente.$error">
 								                	<div ng-message="required" ng-if="model.casaLar.form.$submitted">Campo obrigatório</div>
-								                	<div ng-message="md-maxlength" ng-if="model.casaLar.form.$submitted">Limite de caracteres excedido</div>
-								                	<div ng-message="email" ng-if="model.casaLar.form.$submitted">Email inválido</div>
 								                </div>
 								            </md-input-container>
 								            
-								            <md-input-container ng-if="model.casaLar.entity.role == 'COLABORADOR_EXTERNO' " layout="column" flex="30" style="margin-right:30px">
-										        <label>Rede de Apoio</label>
-										        <md-select name="redeApoio" ng-disabled="!model.casaLar.entity.enabled" required ng-model="model.casaLar.entity.redeApoio">
-										          <md-option ng-repeat="rede in allRedeApoio" value="{{rede}}">{{rede.nome}}</md-option>
-										        </md-select>
-										        
-										        <div ng-messages="model.casaLar.form.redeApoio.$error">
+								            <md-input-container layout="column" flex="30">
+									    		<label>Número do cpf</label>
+								                <input type="text" maxlength="14" name="numeroCpfResidente" mask="999.999.999-99" ng-model="model.casaLar.entity.cuidadoraResidente.cpf" ng-cpf>
+								            	
+								            	<div ng-messages="model.casaLar.form.numeroCpfResidente.$error">
+								               		<div ng-message="cpf"  ng-if="model.casaLar.form.$submitted">CPF inválido</div>
+								                </div>
+								            	
+								            </md-input-container>
+								            
+								            <md-input-container layout="column" flex="30" ">
+									    		<label>Nome da cuidadora Apoiadora</label>
+								                <input  maxlength="255" md-maxlength="255" name="nomeCuidadoraApoiadora" required ng-model="model.casaLar.entity.cuidadoraApoiadora.nome">
+								
+								                <div ng-messages="model.casaLar.form.nomeCuidadoraApoiadora.$error">
 								                	<div ng-message="required" ng-if="model.casaLar.form.$submitted">Campo obrigatório</div>
 								                </div>
-										    </md-input-container>
+								            </md-input-container>
+								            
+								            <md-input-container layout="column" flex="30">
+									    		<label>Número do cpf</label>
+								                <input type="text" maxlength="14" name="numeroCpfApoiadora" mask="999.999.999-99" ng-model="model.casaLar.entity.cuidadoraApoiadora.cpf" ng-cpf>
+								            	
+								            	<div ng-messages="model.integranteFamiliar.form.numeroCpfApoiadora.$error">
+								               		<div ng-message="cpf"  ng-if="model.casaLar.form.$submitted">CPF inválido</div>
+								                </div>
+								            	
+								            </md-input-container>
+								            
+								            <div class="default-info" flex> 
+												<span>Crianças</span>
+											</div>
+											
+											<md-table-container>
+											  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
+											    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+											      <tr md-row>
+											        <th md-column md-order-by="nameToLower"><span>Nome</span></th>
+											        <th md-column md-order-by="nameToLower"><span>Data de acolhimento</span></th>
+											        <th md-column md-numeric ><span>Nome da família</span></th>
+											      </tr>
+											    </thead>
+											    <tbody md-body>
+											      <tr md-row md-select="dessert" style="cursor:pointer" md-select-id="name" md-auto-select ng-repeat="crianca in model.crianca.page.content">
+											        <td md-cell>{{::crianca.nome}}</td>
+											        <td md-cell>{{::crianca.dataAcolhimento | date : format : timezone}}</td>
+											        <td md-cell>{{::crianca.familia.nome}}</td>
+											      </tr>
+											    </tbody>
+											  </table>
+											</md-table-container>
+									        
+									        <div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.crianca.page.content.length == 0">
+												Não há nenhuma criança acolhida por esta casa lar . 
+											</div>
+											
+											<md-divider></md-divider>
+											<div class="default-paginator" layout layout-align="end center" ng-if="model.integranteFamiliar.page.content.length > 0">
+												{{ model.integranteFamiliar.page.pageable.page + 1 }} de {{ totalPagesIntegrante }}
+												<md-button class="md-icon-button" ng-disabled="(model.integranteFamiliar.page.pageable.page + 1) < 2" ng-click="onIntegrantePaginationChange(false)">
+													<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.integranteFamiliar.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
+												</md-button>
+												<md-button class="md-icon-button" ng-disabled="(model.integranteFamiliar.page.pageable.page + 1) >= totalPagesIntegrante" ng-click="onIntegrantePaginationChange(true)">
+													<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.integranteFamiliar.page.pageable.page + 1) >= Math.ceil(model.integranteFamiliar.page.total/model.familia.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
+												</md-button>
+									  		</div>
 								            
 										</form>
 									</md-toolbar>
