--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -38,6 +38,8 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/redeapoio/popup/selecionar-rede-apoio-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/redeapoio/rede-apoio-controller.js}"></script>
 		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/questionario/questionario-controller.js}"></script>
+		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
 		<script type="text/javascript" th:src="@{/static/js/angular.maskMoney.js}"></script>
